2013-04-20 23:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXContainerItemProxy.m
	* PBXFileReference.h
	* PBXFileReference.m: Use the compiler which was used to build
	GNUstep instead of hardcoding.
	* PBXProject.m: Proceed into target directories when doing the build
	* PBXResourcesBuildPhase.m: Copy lproj files.
	* PBXShellScriptBuildPhase.m: Improve building of 10.7 and 10.8
	(Xcode 4.4 and 4.5) style files.

2012-10-15 13:20-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GSXCBuildContext.h: Add declaration for addEntriesFromDictionary:
	* GSXCBuildContext.m: Implement addEntriesFromDictionary:
	* PBXContainerItemProxy.m: Correct warnings.
	* PBXContainer.m: Added method to collect header directories
	which need to be referenced for build.
	* PBXFileReference.m: Add code to handle INCLUDE_DIRS context
	variable.
	* PBXProject.h: Added ivar
	* PBXProject.m: Add project context.

2012-08-07 01:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Automatically add link directives -I
	and -L for frameworks present in the UninstalledProducts directory.
	This allows for linking of dependencies prior to installation.

2012-08-07 00:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXNativeTarget.m: Generate the links with a relative path.

2012-03-14 18:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Remove commented out code..
	* README: Update readme to reflect new name.

2012-02-25 11:36-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBXResourcesBuildPhase.m: Fix issues with copying of resources
	which are localized.

2012-02-25 10:29-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBXVariantGroup.m: More fixes for appending resource names.
	Only use the last path component.

2012-02-25 00:53-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog: Add ChangeLog.
	* PBXVariantGroup.m: Fix issue with appending resource