@@ -1,6 +1,8 @@
 #import <Foundation/NSString.h>
 
 @interface NSString (PBXAdditions)
+- (NSString *) firstPathComponent;
 - (NSString *) stringByEscapingSpecialCharacters;
 - (NSString *) stringByCapitalizingFirstCharacter;
+- (NSString *) stringByDeletingFirstPathComponent;
 @end
