@@ -201,14 +201,18 @@
       BOOL targetInSubdir = NO;
       NSString *currentDirectory = [NSString stringWithCString: getcwd(NULL,0)];
 
+      [context contextDictionaryForName: [target name]];
+      [self buildString];
+
       // Go into the target...
       if(YES == [fileManager fileExistsAtPath:[target name]])
 	{
+	  targetInSubdir = YES;
 	  chdir([[target name] UTF8String]);
+	  [context setObject: @"YES"
+		      forKey: @"TARGET_IN_SUBDIR"];
 	}
 
-      [context contextDictionaryForName: [target name]];
-      [self buildString];
       [context setObject: mainGroup 
 		  forKey: @"MAIN_GROUP"]; 
       [context setObject: container
@@ -235,17 +239,36 @@
   NSLog(@"=== Cleaning Project");
   [buildConfigurationList applyDefaultConfiguration];
 
+  NSFileManager *fileManager = [NSFileManager defaultManager];
   GSXCBuildContext *context = [GSXCBuildContext sharedBuildContext];
   NSEnumerator *en = [targets objectEnumerator];
+  NSString *currentDirectory = [NSString stringWithCString: getcwd(NULL,0)];
   id target = nil;
   BOOL result = YES;
+  
   while((target = [en nextObject]) != nil && result)
     {
+      BOOL targetInSubdir = NO;
+      // Go into the target...
+      if(YES == [fileManager fileExistsAtPath:[target name]])
+	{
+	  targetInSubdir = YES;
+	  chdir([[target name] UTF8String]);
+	  [context setObject: @"YES"
+		      forKey: @"TARGET_IN_SUBDIR"];
+	}
+
       [context contextDictionaryForName: [target name]];
       [context setObject: mainGroup 
 		  forKey: @"MAIN_GROUP"]; 
       result = [target clean];
       [context popCurrentContext];
+
+      // Back to the current dir...
+      if(YES == targetInSubdir)
+	{
+	  chdir([currentDirectory UTF8String]);
+	}
     }
   NSLog(@"=== Completed Cleaning Project");
   return result;  
